# Parallel-and-distributed-computing

./: .gitignore  CMakeLists.txt  README.md
memoria_cache/: 1_bucles_anidados.cpp  2_matriz_clasica.cpp  3_matriz_bloques_x_clasica.cpp  4_analisis.cpp  README.md
py/: bussy_for_dentro.cpp  bussy_for_dentro.py  implementacion.cpp  implementacion.py
